--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
-  name: test_bd
+  name: bd
   namespace: entrega-final
 spec:
   progressDeadlineSeconds: 600
@@ -9,7 +9,7 @@ spec:
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      workload.user.cattle.io/workloadselector: deployment-entrega-final-test
+      workload.user.cattle.io/workloadselector: deployment-entrega-final-bd
   strategy:
     rollingUpdate:
       maxSurge: 1
@@ -18,12 +18,15 @@ spec:
   template:
     metadata:
       labels:
-        workload.user.cattle.io/workloadselector: deployment-entrega-final-test
+        workload.user.cattle.io/workloadselector: deployment-entrega-final-bd
     spec:
       containers:
-      - image: czdev/miws
+      - image: jdgk27/proyecto2:bd
         imagePullPolicy: Always
-        name: test
+        name: bd
+        env:
+        - name: MYSQL_ROOT_PASSWORD
+          value: 123456789
       dnsPolicy: ClusterFirst
       imagePullSecrets:
       - name: dockerhub
@@ -36,7 +39,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    field.cattle.io/targetWorkloadIds: '["deployment:entrega-final:test"]'
+    field.cattle.io/targetWorkloadIds: '["deployment:entrega-final:bd"]'
     workload.cattle.io/targetWorkloadIdNoop: "true"
     workload.cattle.io/workloadPortBased: "true"
   labels:
@@ -50,5 +53,5 @@ spec:
     protocol: TCP
     targetPort: 3306
   selector:
-    workload.user.cattle.io/workloadselector: deployment-entrega-final-test
+    workload.user.cattle.io/workloadselector: deployment-entrega-final-bd
   type: LoadBalancer 
