--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -6,7 +6,7 @@ stages:
       buildContext: .
       tag: jdgk27/proyecto2:bd
       pushRemote: true
-      registry: test.docker.io
+      registry: index.docker.io
 - name: Crear en k8s
   steps:
   - applyYamlConfig:
