--- a/deployment.yaml
+++ b/deployment.yaml
@@ -3,38 +3,52 @@ kind: Deployment
 metadata:
   name: bd
   namespace: entrega-final
-  app: mysql
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
+  revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app: mysql
+      workload.user.cattle.io/workloadselector: deployment-entrega-final-bd
+  strategy:
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
+    type: RollingUpdate
   template:
     metadata:
       labels:
-        app: mysql
+        workload.user.cattle.io/workloadselector: deployment-entrega-final-bd
     spec:
       containers:
       - image: jdgk27/proyecto2:bd
         imagePullPolicy: Always
         name: bd
-        env:
-        - name: MYSQL_ROOT_PASSWORD
-          value: 123456789
+      dnsPolicy: ClusterFirst
+      imagePullSecrets:
+      - name: dockerhub
+      restartPolicy: Always
+      schedulerName: default-scheduler
+      securityContext: {}
+      terminationGracePeriodSeconds: 30
 ---      
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
-  namespace: entrega-final
+  annotations:
+    field.cattle.io/targetWorkloadIds: '["deployment:entrega-final:bd"]'
+    workload.cattle.io/targetWorkloadIdNoop: "true"
+    workload.cattle.io/workloadPortBased: "true"
   labels:
-    app: mysql
+    cattle.io/creator: norman
+  name: nginx-loadbalancer-bd
+  namespace: entrega-final
 spec:
-  type: ClusterIP 
+  externalTrafficPolicy: Cluster
   ports:
   - port: 3306
+    protocol: TCP
     targetPort: 3306
   selector:
-    app: mysql
-  
+    workload.user.cattle.io/workloadselector: deployment-entrega-final-bd
+  type: LoadBalancer 
