--- a/deployment.yaml
+++ b/deployment.yaml
@@ -26,7 +26,7 @@ spec:
         name: bd
         env:
         - name: MYSQL_ROOT_PASSWORD
-          value: 123456789
+          value: '123456789'
       dnsPolicy: ClusterFirst
       imagePullSecrets:
       - name: dockerhub
